💄 Fix issue where context popup text was being cut off

--- a/components/dev/content/dev-customizable-area-context.css
+++ b/components/dev/content/dev-customizable-area-context.css
@@ -8,6 +8,7 @@ dev-customizable-area-context menupopup {
     padding: 8px;
     border: 1px solid white;
     border-radius: 8px;
+    min-width: max-content;
 }
 
 dev-customizable-area-context menupopup .area-context-menu-content {
